--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -35,14 +35,18 @@
         <h1 id="noTest">u ain't got no typing test because this experience is not meant for mobile...</h1>
         <section id="test">
             <section id="words">
+                <div id="startTestPrompt"><span>Click here to start test...</span></div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
+                    lorem ipsum dolor sit amet consectetur adipisicing elit. repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
+                    lorem ipsum dolor sit amet consectetur adipisicing elit. repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
+                    lorem ipsum dolor sit amet consectetur adipisicing elit. repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
+                    lorem ipsum dolor sit amet consectetur adipisicing elit. repellat nemo blanditiis ipsa, reiciendis, molestias totam pariatur minus cumque maiores eveniet voluptas recusandae dignissimos sequi atque voluptatum ad ipsam consequuntur officiis.
                 </p>
             </section>
-            <section id="counter"><span>103 WPM</span></section>
+            <section id="timerAndCounter">
+                <section id="timer"><span>23</span></section>
+                <section id="counter"><span>103 WPM</span></section>
+            </section>
         </section>
         <section id="keeb"></section>
     </main>
