--- a/test_app/static/css/keeb.css
+++ b/test_app/static/css/keeb.css
@@ -1,14 +1,15 @@
 main section#keeb {
-    height: calc(40vh - 50px);
+    height: calc(36vh + 60px);
+    padding-top: 2vh;
     width: 90%;
     max-width: 1220px;
-    margin: 1vh auto 1vh;
-    padding: 25px 0;
+    margin: 1vh auto 0;
     border-radius: 5px;
 }
 
 main section#keeb div.keebRow {
     height: 6vh;
+    margin: 5px 0;
     display: flex;
     justify-content: center;
 }
@@ -50,3 +51,12 @@ main section#keeb div.keebKey div.main
     padding: 0;
     font-size: calc(12px + .6vh);
 }
+
+footer {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-start;
+}
+
+footer form select { margin: 0 10px; }
