--- a/test_app/static/css/global.css
+++ b/test_app/static/css/global.css
@@ -12,6 +12,8 @@ a { text-decoration: none; }
 
 h1 { font-size: calc(40px + 1vw); }
 
+.hide { display: none; }
+
 select { 
     border: 1px solid var(--dark-color); 
     border-radius: 3px;
@@ -47,7 +49,6 @@ nav a.brand span.fullTitle { color: var(--dark-color); }
 }
 @media only screen and (max-width: 480px) {
     #noTest { display: block; }
-    section#test { display: none; }
-    section#words, section#timerAndCounter,
+    section#test, section#words, section#timerAndCounter,
     form#layoutForm, form#modeForm { display: none; }
 }
