--- a/test_app/static/css/test.css
+++ b/test_app/static/css/test.css
@@ -1,68 +1,90 @@
-main section#test {
+section#test {
     height: 45vh;
     width: 90%;
     min-width: 750px;
     margin: 2vh auto 1vh;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    border: 1px solid var(--dark-color);
-    border-radius: 5px;
+    justify-content: center;
     color: var(--text-color);
 }
 
-main section#test section#words {
-    height: 28vh;
-    width: 74%;
-    padding: 6vh 3%;
-    border: 1px solid var(--dark-color);
-    border-radius: 5px;
+section#words {
+    height: 40vh;
+    width: 80%;
     cursor: pointer;
 }
-main section#test section#words div#startTestPrompt {
+
+div#startTestPrompt {
     position: absolute;
     top: calc(10vh + 8px); 
-    left: 6.5%; 
+    left: 14%;
     height: 50px;
-    padding: calc(20vh - 25px) 0;
     width: 72%;
+    padding: calc(20vh - 25px) 0;
     font-size: calc(20px + 0.4vw);
     text-align: center;
+    z-index: 800;
 }
 
-main section#test section#words p {
-    height: 100%;
-    width: 100%;
-    opacity: 0.05;
-    overflow: hidden;
-    font-family: "Roboto Mono", monospace;
-    font-weight: 600;
-    font-size: calc(28px + 0.4vw);
-    line-height: 2;
-}
-
-main section#test section#timerAndCounter { width: 15%; }
-main section#test section#timer,
-main section#test section#counter {
-    width: 100%;
-    border: 1px solid var(--dark-color);
+div#wordWrapper {
+    height: 28vh;
+    width: 94%;
+    margin: 6vh 3%;
     border-radius: 5px;
-    text-align: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    overflow: hidden;
+    opacity: 0.05;
+    font-family: "Roboto Mono", monospace;
+    font-size: calc(28px + 0.7vw);
 }
-main section#test section#timer { height: 15vh; }
-main section#test section#counter { height: 25vh; }
+div#startTestPrompt:hover ~ div#wordWrapper { background-color: var(--text-color); }
 
-main section#test section#timer span,
-main section#test section#counter span {
-    height: 100%;
-    width: 100%;
-    font-family: "Source Code Pro", monospace;
-    font-size: calc(40px + 2vw);
-    font-weight: 600;
-}   
-main section#test section#timer span {
-    color: var(--bg-color);
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: var(--text-color);
+div#wordWrapper div.word {
+    height: calc(28px + 0.7vw);
+    margin: 0 1% 1.5vh; 
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
 }
-main section#test section#counter span { color: var(--text-color); }
+div#wordWrapper div.letter {
+    height: calc(28px + 0.7vw);
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+div.word.current { color: var(--keyPressDark-color); }
+div.letter.nextChar { border-left: 3px solid var(--brand-color); }
+div.letter.beforeNextChar { border-right: 3px solid var(--brand-color); }
+div.letter.incorrect { color: var(--keyPressLight-color); }
+div.letter.correct { color: var(--light-color); }
+
+section#timerAndCounter { width: 0; }
+section#timer,
+section#counter {
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+section#timer { height: 15vh; }
+section#counter { height: 25vh; }
+
+section#timer span,
+section#counter span {
+    display: inline-block;
+    font-family: "Source Code Pro", monospace;
+    font-weight: 600;
+    text-align: center;
+}   
+section#timer span {
+    color: var(--text-color);
+    font-size: calc(40px + 5vw);
+}
+section#counter span {
+    color: var(--text-color); 
+    font-size: calc(40px + 2vw);
+}
