--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -49,10 +49,10 @@
             </section>
             <section id="timerAndCounter">
                 <section id="timer">
-                    <span>30</span>
+                    <span></span>
                 </section>
                 <section id="counter">
-                    <span>??? WPM</span>
+                    <span></span>
                 </section>
             </section>
         </section>
