--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -9,17 +9,22 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
+    <!-- Boostrap Icons CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+    <!-- Self-defined CSS -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="stylesheet" href="{% static 'css/keeb.css' %}">
+    <link rel="stylesheet" href="{% static 'css/test.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-    {% load static %}
-    <!-- Self-defined CSS -->
-    <link rel="stylesheet" href="{% static 'css/global.css' %}">
-    <link rel="stylesheet" href="{% static 'css/test.css' %}">
-    <link rel="stylesheet" href="{% static 'css/keeb.css' %}">
     <!-- Self-defined JS -->
     <script src="{% static 'js/keeb.js' %}"></script>
     <script src="{% static 'js/test.js' %}"></script>
+    <script src="{% static 'js/user.js' %}"></script>
     <script>
+        // set keeb layout and color mode based on session vars
         $(document).ready( function() {
             setLayout("{{ current_layout.0 }}");
             changeMode("{{ current_mode.0 }}");
@@ -31,7 +36,11 @@
         <a class="brand" href="/">
             <span class="fullTitle">u ain't got</span> no type
         </a>
+        <i id="navMenu" class="bi bi-list"></i>
     </nav>
+    <section id="userPane">
+        {% include 'login.html' %}
+    </section>
     <main>
         <h1 id="noTest">u ain't got no typing test because this experience is not meant for mobile...</h1>
         <section id="test">
