--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -8,7 +8,8 @@
     <title>u ain't got no type -- a simple but elegant typnig test</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <!-- Boostrap Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <!-- Self-defined CSS -->
@@ -17,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/keeb.css' %}">
     <link rel="stylesheet" href="{% static 'css/test.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user.css' %}">
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <!-- Self-defined JS -->
@@ -24,10 +26,35 @@
     <script src="{% static 'js/test.js' %}"></script>
     <script src="{% static 'js/user.js' %}"></script>
     <script>
-        // set keeb layout and color mode based on session vars
         $(document).ready( function() {
-            setLayout("{{ current_layout.0 }}");
-            changeMode("{{ current_mode.0 }}");
+            // set keeb layout and color mode based on session vars
+            {% if user is None %}
+                setLayout("{{ default_layout }}");
+                changeMode("{{ default_mode }}");
+            {% else %}
+                setLayout("{{ user.layout }}");
+                changeMode("{{ user.mode }}");
+            {% endif %}
+            // instantiate test object when test prompt is clicked
+            $("section#words").click( function () {
+                // hide test prompt
+                $("section#words div#startTestPrompt").hide();
+                // increase test opacity to 100% 
+                $("section#words div#wordWrapper").css("opacity", "1");
+                // ease-in timer and counter 
+                $("section#timerAndCounter").animate(
+                    {"width": "15%"}, 500
+                );
+                $("section#test").css("justify-content", "space-evenly");
+                $("section#timerAndCounter section#counter").css("display", "flex");
+                $("section#timerAndCounter section#timer").css("display", "flex");
+                // instantiate new test with user test duration
+                let test = new NoTypeTest(
+                    test_length = {% if user is None %} {{default_duration}} {% else %} {{user.duration}} {% endif %}
+                );
+                // open keyup listener, send all keystrokes to handler
+                $(document).keyup( (e) => test.keyHandler(e) );
+            });
         });
     </script>
 </head>
@@ -38,8 +65,18 @@
         </a>
         <i id="navMenu" class="bi bi-list"></i>
     </nav>
-    <section id="userPane">
-        {% include 'login.html' %}
+    <section id="userPane" 
+        {% if auth_type %} 
+            style="left: 70%; width: 30%;" 
+        {% else %} 
+            style="left: 100%; width: 0%;" 
+        {% endif %}
+    >
+        {% if user %}
+            {% include 'user.html' %}
+        {% else %}
+            {% include 'login.html' %}
+        {% endif %}
     </section>
     <main>
         <h1 id="noTest">u ain't got no typing test because this experience is not meant for mobile...</h1>
@@ -67,7 +104,7 @@
         </section>
         <section id="keeb"></section>
     </main>
-    <footer>
+    <!--<footer>
         <form id="layoutForm" action="/change_layout" method="post">
             {% csrf_token %}
             <select name="layout" id="layoutPicker">
@@ -90,6 +127,6 @@
                 {% endfor %}
             </select>
         </form>
-    </footer>
+    </footer>-->
 </body>
 </html>
