--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -8,7 +8,6 @@
     <title>u ain't got no type -- a simple but elegant typnig test</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!--<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <!-- Boostrap Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
@@ -17,46 +16,14 @@
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="stylesheet" href="{% static 'css/keeb.css' %}">
     <link rel="stylesheet" href="{% static 'css/test.css' %}">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-    <link rel="stylesheet" href="{% static 'css/user.css' %}">
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <!-- Self-defined JS -->
-    <script src="{% static 'js/keeb.js' %}"></script>
+    <script src="{% static 'js/global.js' %}"></script>
+    <script src="{% static 'js/utils.js' %}"></script>
     <script src="{% static 'js/test.js' %}"></script>
-    <script src="{% static 'js/user.js' %}"></script>
-    <script>
-        $(document).ready( function() {
-            // set keeb layout and color mode based on session vars
-            {% if user is None %}
-                setLayout("{{ default_layout }}");
-                changeMode("{{ default_mode }}");
-            {% else %}
-                setLayout("{{ user.layout }}");
-                changeMode("{{ user.mode }}");
-            {% endif %}
-            // instantiate test object when test prompt is clicked
-            $("section#words").click( function () {
-                // hide test prompt
-                $("section#words div#startTestPrompt").hide();
-                // increase test opacity to 100% 
-                $("section#words div#wordWrapper").css("opacity", "1");
-                // ease-in timer and counter 
-                $("section#timerAndCounter").animate(
-                    {"width": "15%"}, 500
-                );
-                $("section#test").css("justify-content", "space-evenly");
-                $("section#timerAndCounter section#counter").css("display", "flex");
-                $("section#timerAndCounter section#timer").css("display", "flex");
-                // instantiate new test with user test duration
-                let test = new NoTypeTest(
-                    test_length = {% if user is None %} {{default_duration}} {% else %} {{user.duration}} {% endif %}
-                );
-                // open keyup listener, send all keystrokes to handler
-                $(document).keyup( (e) => test.keyHandler(e) );
-            });
-        });
-    </script>
+    <script src="{% static 'js/consts.js' %}"></script>
+    <script src="{% static 'js/keeb.js' %}"></script>
 </head>
 <body>
     <nav>
@@ -81,6 +48,16 @@
     <main>
         <h1 id="noTest">u ain't got no typing test because this experience is not meant for mobile...</h1>
         <section id="test">
+            {% csrf_token %}
+            <input type="hidden" value="not-started" id="testState">
+            <input type="hidden" 
+                {% if user %} 
+                    value="{{user.duration}}" 
+                {% else %} 
+                    value="{{preferences.default_duration}}" 
+                {% endif %} 
+                id="testLength"
+            >
             <section id="words">
                 <div id="startTestPrompt"><span>Click here to start test...</span></div>
                 <div id="wordWrapper">
@@ -102,31 +79,24 @@
                 </section>
             </section>
         </section>
-        <section id="keeb"></section>
+        <section id="keeb">
+            <input type="hidden" 
+                {% if user %}
+                    value="{{user.layout}}"
+                {% else %}
+                    value="{{preferences.default_layout}}"
+                {% endif %}
+                id="currentLayout"
+            >
+            <input type="hidden" 
+                {% if user %}
+                    value="{{user.mode}}"
+                {% else %}
+                    value="{{preferences.default_mode}}"
+                {% endif %}
+                id="currentMode"
+            >
+        </section>
     </main>
-    <!--<footer>
-        <form id="layoutForm" action="/change_layout" method="post">
-            {% csrf_token %}
-            <select name="layout" id="layoutPicker">
-                <option value="{{ current_layout.0 }}">{{ current_layout.1 }}</option>
-                {% for layout in layouts %}
-                    {% if layout.0 != current_layout.0 %}
-                        <option value="{{ layout.0 }}">{{ layout.1 }}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
-        </form>
-        <form  id="modeForm" action="/change_mode" method="post">
-            {% csrf_token %}
-            <select name="mode" id="modePicker">
-                <option value="{{ current_mode.0 }}">{{ current_mode.1 }}</option>
-                {% for mode in modes %}
-                    {% if mode.0 != current_mode.0 %}
-                        <option value="{{ mode.0 }}">{{ mode.1 }}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
-        </form>
-    </footer>-->
 </body>
 </html>
