--- a/test_app/templates/login.html
+++ b/test_app/templates/login.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+<script src="{% static 'js/login.js' %}"></script>
 <div id="loginPage">
     <div id="loginRegistrationPicker">
         <span id="loginPicker">Login</span>
