--- a/test_app/templates/user.html
+++ b/test_app/templates/user.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/user.css' %}">
+<script src="{% static 'js/user.js' %}"></script>
 <div id="userPage">
     <h1>Hello, {{ user.username }}!</h1>
 
@@ -82,6 +85,6 @@
                 {% endfor %}
             </div>
         </label>
+        <a href="/logout" id="logoutLink">Logout</a>
     </div>
-
 </div>
