--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -47,56 +47,9 @@
     </section>
     <main>
         <h1 id="noTest">u ain't got no typing test because this experience is not meant for mobile...</h1>
-        <section id="test">
-            {% csrf_token %}
-            <input type="hidden" value="not-started" id="testState">
-            <input type="hidden" 
-                {% if user %} 
-                    value="{{user.duration}}" 
-                {% else %} 
-                    value="{{preferences.default_duration}}" 
-                {% endif %} 
-                id="testLength"
-            >
-            <section id="words">
-                <div id="startTestPrompt"><span>Click here to start test...</span></div>
-                <div id="wordWrapper">
-                {% for word in word_list %}
-                    <div class="word">
-                    {% for letter in word %}
-                    <div class="letter">{{letter}}</div>
-                    {% endfor %}
-                    </div>
-                {% endfor %}
-                </div>
-            </section>
-            <section id="timerAndCounter">
-                <section id="timer">
-                    <span></span>
-                </section>
-                <section id="counter">
-                    <span></span>
-                </section>
-            </section>
-        </section>
-        <section id="keeb">
-            <input type="hidden" 
-                {% if user %}
-                    value="{{user.layout}}"
-                {% else %}
-                    value="{{preferences.default_layout}}"
-                {% endif %}
-                id="currentLayout"
-            >
-            <input type="hidden" 
-                {% if user %}
-                    value="{{user.mode}}"
-                {% else %}
-                    value="{{preferences.default_mode}}"
-                {% endif %}
-                id="currentMode"
-            >
-        </section>
+        {% include 'test.html' %}
+        {% include 'keeb.html' %}
+        {% include 'results.html' %}
     </main>
 </body>
 </html>
