--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -33,33 +33,8 @@
         </div>
         <i id="navMenu" class="bi bi-list"></i>
     </nav>
-    <section id="leaderboard">
-        <div id="leaderboardOverlay"></div>
-        <div id="leaderboardScreen">
-            <table id="leaderboardTable">
-            <thead>
-                <tr>
-                    <th>wpm</th>
-                    <th>user</th>
-                    <th>duration</th>
-                    <th>difficulty</th>
-                    <th>type</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for result in leaderboard_results %}
-                <tr class="leaderboardResult">
-                    <td>{{result.score}}</td>
-                    <td>{{result.user_id.username}}</td>
-                    <td>{{result.get_duration_display}}</td>
-                    <td>{{result.get_difficulty_display}}</td>
-                    <td>{{result.get_test_type_display}}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-            </table>
-        </div>
-    </section>
+    {% include 'leaderboard.html' %}
+    
     <section id="userPane" 
         {% if auth_type %} 
             style="left: 70%; width: 30%;" 
