--- a/test_app/templates/leaderboard.html
+++ b/test_app/templates/leaderboard.html
@@ -31,11 +31,11 @@
         <tbody>
         {% for result in leaderboard_results %}
             <tr class="leaderboardResult">
-                <td>{{result.score}}</td>
-                <td>{{result.user_id.username}}</td>
-                <td>{{result.get_duration_display}}</td>
-                <td>{{result.get_difficulty_display}}</td>
-                <td>{{result.get_test_type_display}}</td>
+                <td><span class="rank">{{result.0}}.</span>{{result.1.score}}</td>
+                <td>{{result.1.user_id.username}}</td>
+                <td>{{result.1.get_duration_display}}</td>
+                <td>{{result.1.get_difficulty_display}}</td>
+                <td>{{result.1.get_test_type_display}}</td>
             </tr>
         {% endfor %}
         </tbody>
