--- a/test_app/templates/leaderboard.html
+++ b/test_app/templates/leaderboard.html
@@ -5,17 +5,22 @@
     <div id="leaderboardOverlay"></div>
     <div id="leaderboardScreen">
 
-        <!-- Duration Buttons -->
-        <div id="durationButtons">
-            <button type="button" id="durationButton1" class="active">30</button> 
-            <button type="button" id="durationButton2" class="active">60</button> 
-            <button type="button" id="durationButton3" class="active">120</button>
-        </div>
-        <!-- Difficulty Buttons -->
-        <div id="difficultyButtons">
-            <button type="button" id="difficultyButton1" class="active">Easy</button>
-            <button type="button" id="difficultyButton2" class="active">Medium</button>
-            <button type="button" id="difficultyButton3" class="active">Hard</button>
+        <div id="leaderboardHeader">
+            <div>
+                <!--
+                    <div id="durationButtons">
+                        <button type="button" id="durationButton1" class="active">30</button> 
+                        <button type="button" id="durationButton2" class="active">60</button> 
+                        <button type="button" id="durationButton3" class="active">120</button>
+                    </div>
+                    <div id="difficultyButtons">
+                        <button type="button" id="difficultyButton1" class="active">Easy</button>
+                        <button type="button" id="difficultyButton2" class="active">Medium</button>
+                        <button type="button" id="difficultyButton3" class="active">Hard</button>
+                    </div>
+                -->
+            </div>
+            <i class="bi bi-x"></i>
         </div>
 
         <table id="leaderboardTable">
