--- a/test_app/static/css/login.css
+++ b/test_app/static/css/login.css
@@ -1,10 +1,10 @@
-div#loginErrors, div#registerErrors { 
+div.errorMessages { 
     width: 70%;
     margin: 10px auto;
     color: red;
 }
 
-div#loginErrors ul, div#registerErrors ul { 
+div.errorMessages ul { 
     list-style-type: none;
     display: flex;
     flex-direction: column;
@@ -36,6 +36,7 @@ div#loginRegistrationPicker span:not(.active):hover {
 }
 div#loginRegistrationPicker span.active {
     background-color: rgb(0, 68, 255);
+    color: white;
 }
 
 section#userPane form { 
@@ -70,4 +71,9 @@ section#userPane form input[type='submit'] {
     display: inline-block;
     font-weight: bold; 
     cursor: pointer;
+}
+
+section#userPane a#passwordResetLink {
+    display: block;
+    text-align: center;
 }
