--- a/test_app/templates/index.html
+++ b/test_app/templates/index.html
@@ -54,5 +54,6 @@
         {% include 'keeb.html' %}
         {% include 'results.html' %}
     </main>
+    <footer>© Sam Royall. All Rights Reserved.</footer>
 </body>
 </html>
