--- a/test_app/static/css/global.css
+++ b/test_app/static/css/global.css
@@ -6,6 +6,13 @@
     vertical-align: baseline;
     font-size: 100%;
     font-family: 'Roboto', sans-serif;
+    /* disallow */
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; 
 }
 
 a { text-decoration: none; }
