--- a/test_app/static/css/test.css
+++ b/test_app/static/css/test.css
@@ -11,7 +11,10 @@ section#test {
 section#words {
     height: 40vh;
     width: 80%;
-    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: default;
 }
 
 div#startTestPrompt {
@@ -24,13 +27,16 @@ div#startTestPrompt {
     font-size: calc(16px + 0.4vw);
     text-align: center;
     z-index: 800;
+    font-size: 1.75rem;
+    cursor: pointer;
 }
 
 div#wordWrapper {
-    height: 28vh;
-    width: 74%;
-    margin: 6vh 3%;
-    padding: 0 10%; 
+    height: 9rem;
+    width: 95%;
+    max-width: 66rem;
+    margin: 0 3%;
+    padding: 0; 
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -39,27 +45,23 @@ div#wordWrapper {
     overflow: hidden;
     opacity: 0.05;
     font-family: "Roboto Mono", monospace;
-    font-size: calc(16px + 0.6vw);
+    font-size: 1.75rem;
 }
 div#startTestPrompt:hover ~ div#wordWrapper { background-color: var(--text-color); }
 
 div#wordWrapper div.word {
-    height: calc(16px + 0.6vw);
-    margin: 0 0 1.5vh; 
+    height: 2.5rem;
+    margin: 0 0 0.5rem; 
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
 }
 div#wordWrapper div.letter {
-    height: calc(16px + 0.6vw);
-    margin: auto;
     display: flex;
     align-items: center;
 }
 div#wordWrapper div.space {
-    height: calc(16px + 0.6vw - 2px);
-    margin: 0 0.1rem;
     width: 0.8rem;
 }
 div#wordWrapper div.space.incorrect { 
