--- a/test_app/templates/test.html
+++ b/test_app/templates/test.html
@@ -12,17 +12,19 @@
     <section id="words">
         <div id="startTestPrompt"><span>Click here to start test...<br>Press TAB to restart!</span></div>
         <div id="wordWrapper">
-        {% for line in word_list %}
-            {% for word in line %}
-                <div class="word">
-                    {% for letter in word %}
-                        <div class="letter">{{letter}}</div>
-                    {% endfor %}
-                    <div class="space"></div>
-                </div>
+            <div id="innerWordWrapper">
+            {% for line in word_list %}
+                {% for word in line %}
+                    <div class="word">
+                        {% for letter in word %}
+                            <div class="letter">{{letter}}</div>
+                        {% endfor %}
+                        <div class="space"></div>
+                    </div>
+                {% endfor %}
+                <br/>
             {% endfor %}
-            <br/>
-        {% endfor %}
+            </div>
         </div>
     </section>
     <section id="timerAndCounter">
